--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,16 +58,9 @@ body {
 	margin-top: 9px;
 }
 
-#now-playing {
+#now-playing, #events, #sports {
 	height: 400px;
-}
-
-#events {
-	height: 400px;
-}
-
-#sports {
-	height: 400px;
+	overflow-y: scroll;
 }
 
 .site-footer, .container:after {
