--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,5 +313,9 @@ h4 {
     font-weight: bolder;
 }
 
-/*End Modal*/
+/*End Modal*
+
+#concerts-gallery, #comedy-gallery, #sports-gallery {
+	overflow-x: scroll;
+}
 
