updating css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,7 +313,7 @@ h4 {
     font-weight: bolder;
 }
 
-/*End Modal*
+/*End Modal*/
 
 #concerts-gallery, #comedy-gallery, #sports-gallery {
 	overflow-x: scroll;
