--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,8 @@ body {
 }
 
 .h1font {
-	font-family: Georgia;
+	padding: 0px 4px;
+	font-family: 'Lobster', cursive;
 	color: #ffffff;
 }
 
@@ -61,6 +62,10 @@ body {
 #now-playing, #events, #sports {
 	height: 400px;
 	overflow-y: scroll;
+}
+
+.panel-movies, .panel-events, .panel-sports {
+	font-family: 'Lato', sans-serif;
 }
 
 .site-footer, .container:after {
@@ -153,11 +158,13 @@ body {
 .moviename {
 
 	text-shadow: 2px 2px 4px #b7b8bc;
+	font-family: 'Lato', sans-serif;
 	font-size: 15px;
 	font-weight: 900;
 }
 
 .rating {
+	font-family: 'Lato', sans-serif;
 	font-size: 10px;
 }
 
@@ -180,6 +187,7 @@ h4 {
 .performer {
 
 	text-shadow: 2px 2px 4px #b7b8bc;
+	font-family: 'Lato', sans-serif;
 	font-size: 15px;
 	font-weight: 900;
 }
