removed sports section from index and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ body {
 	overflow-y: scroll;
 }
 
-.panel-movies, .panel-events, .panel-sports {
+.panel-movies, .panel-events {
 	font-family: 'Lato', sans-serif;
 }
 
