updating index to remove search bar and updating css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,12 @@ body {
 }
 
 .panel-movies, .panel-events {
-	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+	font-family: 'Amatic SC', cursive;
+}
+
+#list {
+	font-family: 'Shojumaru', cursive;
 }
 
 .site-footer, .container:after {
