--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 #background_video {
-    z-index: -10;
+    z-index: -99;
     position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
@@ -32,7 +32,7 @@ body {
 }
 
 #video_cover {
-    z-index: -10;
+    z-index: -99;
     position: absolute;
     width: 100%; height: 100%;
     background: url('../images/Concrete_Jungle.jpg') no-repeat;
@@ -71,6 +71,7 @@ body {
 }
 
 .container {
+    margin-top: 90px;
     min-height: 100%;
     /* equal to footer height */
     margin-bottom: -50px; 
@@ -90,7 +91,7 @@ body {
 }
 
 #now-playing, #events, #sports {
-    height: 400px;
+    height: 500px;
     overflow-y: scroll;
 }
 
@@ -135,16 +136,19 @@ body {
 /* Styles for Movie.html  Start*/
 
 .movie-panel {
+    height: 700px;
     margin-top: 20px;
 }
 
 .movie-panel-main {
+
     margin-right: 10px;
     width: 75%;
     background-color: #fff;
 }
 
 .movie-panel-side {
+    overflow-y: scroll;
     width: 23%;
 }
 
@@ -169,6 +173,7 @@ body {
 }
 
 #movie-gallery {
+    display: inline-block;
     margin-top: 20px;
 }
 
