--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body {
     z-index: -99;
     position: absolute;
     width: 100%; height: 100%;
-    background: url('../images/Concrete_Jungle.jpg') no-repeat;
+   /* background: url('../images/Concrete_Jungle.jpg') no-repeat;*/
     background-size: cover;
     background-position: center;
 }
